 # Fixed issue [#24204] Primary keys from request should be cast to integer (Ian MacLennan).
 # Fixed issue [#24207] Level controller does not cast primary keys from request to int (Ian MacLennan).
 # Fixed issue [#24252] Unescaped value should be filtered (Ian MacLennan).
 # Fixed issue [#24254] Hathor status module jtext plurals (Andrea Tarr).

09-Jan-2011 Christophe Demko
 # [#24210] Revert to 1.5 behaviour for plugin language loading (Samuel Moffat)
 # [#24128] * Forms displayed in front-end gets same attributes as when using them to edit
 # [#23939] No empty menus in menu
 # [#24229] Typo in sample data (Rouven Weßling)
 # [#24223] Article link from archive view doesn't work (Elin Waring)
 # [#24234] Missing fied display_num in menu items type of category list (Akarawuth Tamrareang)
 ^ Reverting commit #20205 since it breaks language loading
 # [#24246] File used in bee5 css does not exists
 # [#21815] JFeedItem->guid is not checked by the default feed renderers (Franklin Tse)
 # [#24245] Beez5 top image not showing (Elin Waring)

09-Jan-2011 Jean-Marie Simonet
 $ Adding cs-CZ, sq-AL to installation langs + updated some.
 $ Adding fa-IR, vi-VN to installation langs
 $# [#24224] Patch for adding plural strings to backend mod_stats module. Thanks Edgars.
 # [#24219] images in media/system/images/notice-*.png are not fully transparent. Thanks Andrea.
 $ Adding gl_ES, gu-IN to installation langs
 $ Adding pl-PL to installation langs
 $ [#24238] Duplicate preposition in Who's Online module. (Typo). Thanks Rouven.
 #$ Moving xx-XX  admin and site language to the tests folder. Updating sql.
 $ Adding sy-IQ, pt-PT, ru-RU, he-IL to installation langs
 $ Adding pt-BR to installation languages
 $ Correcting some install lang strings
 # [#23785] media manager modal in weblinks options wrong size. Thanks Andrea.

08-Jan-2011 Ian MacLennan
 # Updating Copyright Year

08-Jan-2011 Mark Dexter