@@ -1,0 +1,13 @@
+/**
+ * @version		$Id$
+ * @copyright	Copyright (C) 2005 - 2011 Open Source Matters, Inc. All rights reserved.
+ * @license		GNU General Public License version 2 or later; see LICENSE.txt
+ */
+
+/* CSS Document */
+
+
+fieldset#jform_db_old label {
+	clear: both;
+	margin: -17px 0 0 25px;
+}
