@@ -19,6 +19,10 @@ defined('_JEXEC') or die;
 		<?php if ($this->direction == 'rtl') : ?>
 			<link href="template/css/template_rtl.css" rel="stylesheet" type="text/css" />
 		<?php endif; ?>
+		
+		<!--[if IE 7]>
+			<link href="template/css/ie7.css" rel="stylesheet" type="text/css" />
+		<![endif]-->
 
 		<script type="text/javascript">
 			window.addEvent('domready', function(){ new Accordion($$('h3.moofx-toggler'), $$('div.moofx-slider'), {onActive: function(toggler, i) { toggler.addClass('moofx-toggler-down'); },onBackground: function(toggler, i) { toggler.removeClass('moofx-toggler-down'); },duration: 300,opacity: false, alwaysHide:true, show: 1}); });
